# environnement_aeroportuaire_simule

./: .gitignore  Makefile  README.md  aeroport.world  env-install.sh
catkin_husky/devel/: .catkin  .rosinstall  setup.sh
catkin_husky/src/husky_nav/: CMakeLists.txt  package.xml
catkin_husky/src/husky_viz/: package.xml
husky/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
husky/logs/begginer_tutorials/: build.check.001.log.stderr
husky/src/beginner_tutorials/: CMakeLists.txt  package.xml
models/a320_collapsed/: a320_collapse.stl  model.config  model.sdf
models/baggage_train/: model.config  model.sdf
models/baggage_truck/: baggage_truck.stl  model.config  model.sdf
models/food_truck/: model.config  model.sdf  model.stl
models/fuel_truck/: 3d-model.dae  fuel_truck.dae  model.config  model.sdf
models/fuel_truck_chassis/: model.config  model.sdf
models/ground_hcar/: model.config  model.sdf
models/passenger/: model.sdf
models/passerelle/: model.config  model.sdf
models/sol/: sol.dae
models/vacuum_truck/: model.config  model.sdf
project-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
project-sources/: CMakeLists.txt
project-sources/include/: sae_globals.hh
project-sources/src/: animated_baggagehandler.cc  animated_bus.cc  animated_chassis.cc  animated_chassis_person.cc  animated_foodhandler.cc  animated_foodtruck.cc  animated_foodtruck2.cc  animated_fuelhandlerc.cc  animated_fueltruck.cc  animated_passenger.cc  animated_sanitationtruck.cc  animated_train.cc  animated_vacuumtruck.cc
(+50 files in other folders)
